Increase support for "Summary" and "Description"
 - Fix bug where Indentation parameter of Template.cs
   counted text after the indentation too.
 - Update PetStore sample slightly.
 - Add support for "Title" field in JSON entities (which maps onto "Summary" field)

--- a/AutoRest/Generators/CSharp/Azure.CSharp/Templates/AzureMethodTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/Azure.CSharp/Templates/AzureMethodTemplate.cshtml
@@ -26,7 +26,9 @@ if (!string.IsNullOrWhiteSpace(Model.ExternalDocsUrl))
 }
 if (!String.IsNullOrEmpty(Model.Description) && !String.IsNullOrEmpty(Model.Summary))
 {
+@:/// <remarks>
 @:@WrapComment("/// ", Model.Description.EscapeXmlComment())
+@:/// </remarks>
 }
 foreach (var parameter in Model.LocalParameters)
 {
@@ -65,7 +67,9 @@ if (!string.IsNullOrWhiteSpace(Model.ExternalDocsUrl))
 }
 if (!String.IsNullOrEmpty(Model.Description) && !String.IsNullOrEmpty(Model.Summary))
 {
+@:/// <remarks>
 @:@WrapComment("/// ", Model.Description.EscapeXmlComment())
+@:/// </remarks>
 }
 foreach (var parameter in Model.LocalParameters)
 {
