--- a/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
@@ -18,7 +18,9 @@
 }
 @if (!String.IsNullOrEmpty(Model.Description) && !String.IsNullOrEmpty(Model.Summary))
 {
+@:/// <remarks>
 @:@WrapComment("/// ", Model.Description.EscapeXmlComment())
+@:/// </remarks>
 }
 @foreach (var parameter in Model.LocalParameters)
 {
