--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/ModelTemplate.cshtml
@@ -1,4 +1,5 @@
-﻿@using System.Linq
+﻿@using System
+@using System.Linq
 @using System.Collections.Generic
 @using Microsoft.Rest.Generator.ClientModel
 @using Microsoft.Rest.Generator.NodeJS
@@ -24,7 +25,16 @@
  * @@class
  * Initializes a new instance of the @(Model.Name) class.
  * @@constructor
-@WrapComment(" * ", Model.Documentation)
+@if (!String.IsNullOrEmpty(Model.Summary))
+{
+  @WrapComment(" * ", "@summary " + Model.Summary)@:
+@: *
+}
+@if (!String.IsNullOrEmpty(Model.Documentation))
+{
+  @WrapComment(" * ", Model.Documentation)@:
+@: *
+}
 @foreach (var property in Model.DocumentationPropertyList)
 {
     @ModelTemplateModel.ConstructPropertyDocumentation(
