--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/ModelTemplateTS.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/ModelTemplateTS.cshtml
@@ -1,4 +1,5 @@
-﻿@using System.Linq
+﻿@using System
+@using System.Linq
 @using System.Collections.Generic
 @using Microsoft.Rest.Generator.ClientModel
 @using Microsoft.Rest.Generator.NodeJS
@@ -9,13 +10,22 @@
  * @@class
  * Initializes a new instance of the @(Model.Name) class.
  * @@constructor
-@WrapComment(" * ", Model.Documentation)
+@if (!String.IsNullOrEmpty(Model.Summary))
+{
+  @WrapComment(" * ", "@summary " + Model.Summary)@:
+@: *
+}
+@if (!String.IsNullOrEmpty(Model.Documentation))
+{
+  @WrapComment(" * ", Model.Documentation)@:
+@: *
+}
 @foreach (var property in Model.DocumentationPropertyList)
 {
     @ModelTemplateModel.ConstructPropertyDocumentation(
               WrapComment(" * ", "@member {" + ModelTemplateModel.GetPropertyDocumentationType(property)
                                              + "} " + ModelTemplateModel.GetPropertyDocumentationName(property)
-                                             + " " + property.Documentation))
+                                             + " " + ModelTemplateModel.GetPropertyDocumentationString(property)))
 }
  */
 @{if (Model.BaseModelType != null)
