--- a/AutoRest/Generators/Python/Azure.Python/Templates/AzurePagingMethodTemplate.cshtml
+++ b/AutoRest/Generators/Python/Azure.Python/Templates/AzurePagingMethodTemplate.cshtml
@@ -8,15 +8,7 @@
 @inherits Microsoft.Rest.Generator.Python.PythonTemplate<Microsoft.Rest.Generator.Azure.Python.AzureMethodTemplateModel>
     def @(Model.Name.ToPythonCase())(
             self, @(Model.MethodParameterDeclaration(true))):
-        """
-@if (!String.IsNullOrEmpty(Model.Summary))
-{
-@:        @WrapComment(string.Empty, Model.Summary)
-}
-@if (!String.IsNullOrEmpty(Model.Description))
-{
-@:        @WrapComment(string.Empty, Model.Description)
-}
+        """@(WrapComment(string.Empty, Model.BuildSummaryAndDescriptionString()))
 @EmptyLine
 @*need to fix comment here for paging function*@
 @foreach(var parameter in Model.DocumentationParameters)
