Adding Model name on the properties of the ServiceClient

--- a/AutoRest/Generators/Ruby/Ruby/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/ServiceClientTemplate.cshtml
@@ -35,7 +35,7 @@ module @Settings.Namespace
 
 @foreach (var operation in Model.MethodGroups)
 {
-    @:@WrapComment("# ", string.Format("@return {0}", RubyCodeNamer.UnderscoreCase(operation)))
+    @:@WrapComment("# ", string.Format("@return [{0}] {1}", operation, RubyCodeNamer.UnderscoreCase(operation)))
     @:attr_reader :@(RubyCodeNamer.UnderscoreCase(operation))
 @EmptyLine
 }
