--- a/AutoRest/Generators/Java/Java/Templates/ServiceClientInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/ServiceClientInterfaceTemplate.cshtml
@@ -23,11 +23,16 @@ package @(Settings.Namespace.ToLower());
  */
 public interface @Model.Name {
     /**
+     * The default base URL.
+     */
+    String DEFAULT_BASE_URL = "@Model.BaseUrl";
+@EmptyLine
+    /**
      * Gets the REST client.
      *
      * @@return the {@@link RestClient} object.
      */
-     RestClient restClient();
+    RestClient restClient();
 @foreach (var property in Model.Properties)
 {
 @EmptyLine
