--- a/AutoRest/Generators/Ruby/Azure.Ruby/Templates/AzureMethodTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Azure.Ruby/Templates/AzureMethodTemplate.cshtml
@@ -1,19 +1,18 @@
 @using System
-@using Microsoft.Rest.Generator.ClientModel
 @using Microsoft.Rest.Generator.Ruby
 @using Microsoft.Rest.Generator.Ruby.TemplateModels
 @using Microsoft.Rest.Generator.Ruby.Templates
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Azure.Ruby.AzureMethodTemplateModel>
 
-@if (!Model.IsLongRunningOperation)
+@if (!Model.IsLongRunningOperation && !Model.IsPageable)
 {
 @:@(Include(new MethodTemplate(), (MethodTemplateModel)Model))
 }
-else if (Model.HttpMethod == HttpMethod.Post || Model.HttpMethod == HttpMethod.Delete)
+else if (!Model.IsLongRunningOperation && Model.IsPageable)
 {
 <text>
 #
-@if (!String.IsNullOrEmpty(Model.Summary))
+@if(!String.IsNullOrEmpty(Model.Summary))
 {
   @WrapComment("# ", Model.Summary)@:
 @:#
@@ -23,33 +22,23 @@ else if (Model.HttpMethod == HttpMethod.Post || Model.HttpMethod == HttpMethod.D
   @WrapComment("# ", Model.Description)@:
 @:#
 }
-@foreach (var parameter in Model.LocalParameters)
+@foreach (var parameter in Model.Parameters)
 {
 @:@WrapComment("# ", string.Format("@param {0} {1}{2}", parameter.Name, parameter.Type.GetYardDocumentation(), parameter.Documentation))
 }
-@WrapComment("# ", "@return [Concurrent::Promise] promise which provides async access to http response.")
 #
-def @(Model.Name)(@(Model.MethodParameterDeclaration))
-  # Send request
-  promise = begin_@(Model.Name)_async(@(Model.MethodParameterInvocation))
-  @EmptyLine
+@WrapComment("# ", string.Format("@return [{0}] which provide lazy access to pages of the response.", Model.ReturnType))
+#
 
-  promise = promise.then do |response|
-    # Defining deserialization method.
-    deserialize_method = lambda do |parsed_response|
-    @if(Model.ReturnType.Body != null)
-    {
-      @:@(Model.DeserializePollingResponse("parsed_response", Model.ReturnType.Body))
-    }
+def @(Model.Name)_as_lazy(@(Model.MethodParameterDeclaration))
+    response = @(Model.Name)_async(@(Model.MethodParameterInvocation)).value!
+    unless response.nil?
+        page = response.body
+        page.next_method = Proc.new do |next_link|
+          @(Model.InvokeNextMethodAsync())
+        end
+    page
     end
-
-   @EmptyLine
-   # Waiting for response.
-   @(Model.ClientReference).get_long_running_operation_result(response, deserialize_method)
-  end
-
-  @EmptyLine
-  promise
 end
 </text>
 }
@@ -82,7 +71,7 @@ def @(Model.Name)(@(Model.MethodParameterDeclaration))
   promise = promise.then do |response|
     # Defining deserialization method.
     deserialize_method = lambda do |parsed_response|
-    @if(Model.ReturnType.Body != null)
+    @if (Model.ReturnType.Body != null)
     {
       @:@(Model.DeserializePollingResponse("parsed_response", Model.ReturnType.Body))
     }
