Move non-top level models out of implementation

--- a/AutoRest/Generators/Java/Java/Templates/ExceptionTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/ExceptionTemplate.cshtml
@@ -9,7 +9,7 @@
  */
 @EmptyLine
 
-package @(Settings.Namespace.ToLower()).@Model.ModelsPackage;
+package @(Settings.Namespace.ToLower())@Model.ModelsPackage;
 @EmptyLine
 
 import com.microsoft.rest.RestException;
