--- a/AutoRest/Generators/Python/Microsoft.Rest.Generator.Python.Azure/Templates/AzureModelInitTemplate.cshtml
+++ b/AutoRest/Generators/Python/Microsoft.Rest.Generator.Python.Azure/Templates/AzureModelInitTemplate.cshtml
@@ -3,7 +3,7 @@
 @using Microsoft.Rest.Generator.Python.TemplateModels
 @using Microsoft.Rest.Generator.Utilities
 @using System.Linq
-@using Microsoft.Rest.Generator.Azure
+@using Microsoft.Rest.Generator.Extensions.Azure
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Python.Azure.AzureModelInitTemplateModel>
 # coding=utf-8
 # --------------------------------------------------------------------------
