adjusted project/namespace name for AutoRest.CSharp.Azure

--- a/src/generator/AutoRest.CSharp.Azure/Templates/AzureMethodGroupTemplate.cshtml
+++ b/src/generator/AutoRest.CSharp.Azure/Templates/AzureMethodGroupTemplate.cshtml
@@ -1,8 +1,8 @@
-﻿@using Microsoft.Rest.Generator.CSharp
+﻿@using AutoRest.CSharp.Azure.TemplateModels
+@using Microsoft.Rest.Generator.CSharp
 @using Microsoft.Rest.Generator.CSharp.Templates
-@using Microsoft.Rest.Generator.CSharp.Azure
 @using Microsoft.Rest.Generator.CSharp.Azure.Templates
-@inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.CSharp.Azure.AzureMethodGroupTemplateModel>
+@inherits Microsoft.Rest.Generator.Template<AutoRest.CSharp.Azure.TemplateModels.AzureMethodGroupTemplateModel>
 @Header("// ")
 @EmptyLine
 namespace @Settings.Namespace
