--- a/src/generator/AutoRest.CSharp.Azure/Templates/PageTemplate.cshtml
+++ b/src/generator/AutoRest.CSharp.Azure/Templates/PageTemplate.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Linq
 @using Microsoft.Rest.Generator.ClientModel
 @using Microsoft.Rest.Generator.Utilities
-@inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.CSharp.Azure.PageTemplateModel>
+@inherits Microsoft.Rest.Generator.Template<AutoRest.CSharp.Azure.TemplateModels.PageTemplateModel>
 @Header("// ")
 @EmptyLine
 namespace @(Settings.Namespace).Models
