updated names/namespaces for AutoRest*CSharp projects

--- a/src/generator/AutoRest.CSharp.Azure/Templates/AzureServiceClientTemplate.cshtml
+++ b/src/generator/AutoRest.CSharp.Azure/Templates/AzureServiceClientTemplate.cshtml
@@ -1,10 +1,10 @@
 ﻿@using System
-@using Microsoft.Rest.Generator.CSharp
-@using Microsoft.Rest.Generator.CSharp.Templates
 @using Microsoft.Rest.Generator.CSharp.Azure.Templates
 @using Microsoft.Rest.Generator.Utilities
 @using System.Linq
 @using AutoRest.CSharp.Azure.TemplateModels
+@using AutoRest.CSharp.TemplateModels
+@using AutoRest.CSharp.Templates
 @inherits Microsoft.Rest.Generator.Template<AutoRest.CSharp.Azure.TemplateModels.AzureServiceClientTemplateModel>
 @Header("// ")
 @EmptyLine
