--- a/src/generator/AutoRest.CSharp/Templates/EnumTemplate.cshtml
+++ b/src/generator/AutoRest.CSharp/Templates/EnumTemplate.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Linq
 @using Microsoft.Rest.Generator.ClientModel
-@inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.CSharp.EnumTemplateModel>
+@inherits Microsoft.Rest.Generator.Template<AutoRest.CSharp.TemplateModels.EnumTemplateModel>
 @Header("// ")
 @EmptyLine
 namespace @(Settings.Namespace).Models
