--- a/src/generator/AutoRest.CSharp/Templates/ExceptionTemplate.cshtml
+++ b/src/generator/AutoRest.CSharp/Templates/ExceptionTemplate.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Linq
 @using Microsoft.Rest.Generator.ClientModel
-@inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.CSharp.ModelTemplateModel>
+@inherits Microsoft.Rest.Generator.Template<AutoRest.CSharp.TemplateModels.ModelTemplateModel>
 @Header("// ")
 @EmptyLine
 namespace @(Settings.Namespace).Models
