--- a/src/generator/AutoRest.CSharp/Templates/ExtensionsTemplate.cshtml
+++ b/src/generator/AutoRest.CSharp/Templates/ExtensionsTemplate.cshtml
@@ -1,7 +1,6 @@
 ﻿@using System.Text
-@using Microsoft.Rest.Generator.CSharp
-@using Microsoft.Rest.Generator.CSharp.Templates
-@inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.CSharp.ExtensionsTemplateModel>
+@using AutoRest.CSharp.Templates
+@inherits Microsoft.Rest.Generator.Template<AutoRest.CSharp.TemplateModels.ExtensionsTemplateModel>
 @Header("// ")
 @EmptyLine
 namespace @Settings.Namespace
