--- a/src/generator/AutoRest.CSharp/Templates/MethodGroupTemplate.cshtml
+++ b/src/generator/AutoRest.CSharp/Templates/MethodGroupTemplate.cshtml
@@ -1,6 +1,5 @@
-﻿@using Microsoft.Rest.Generator.CSharp
-@using Microsoft.Rest.Generator.CSharp.Templates
-@inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.CSharp.MethodGroupTemplateModel>
+﻿@using AutoRest.CSharp.Templates
+@inherits Microsoft.Rest.Generator.Template<AutoRest.CSharp.TemplateModels.MethodGroupTemplateModel>
 @Header("// ")
 @EmptyLine
 namespace @Settings.Namespace
