--- a/src/generator/AutoRest.CSharp/Templates/ModelTemplate.cshtml
+++ b/src/generator/AutoRest.CSharp/Templates/ModelTemplate.cshtml
@@ -2,7 +2,7 @@
 @using Microsoft.Rest.Generator.ClientModel
 @using Microsoft.Rest.Generator.Utilities
 @using Microsoft.Rest.Generator
-@inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.CSharp.ModelTemplateModel>
+@inherits Microsoft.Rest.Generator.Template<global::AutoRest.CSharp.TemplateModels.ModelTemplateModel>
 @Header("// ")
 @EmptyLine
 namespace @(Settings.Namespace).Models
