--- a/src/generator/AutoRest.CSharp/Templates/ServiceClientBodyTemplate.cshtml
+++ b/src/generator/AutoRest.CSharp/Templates/ServiceClientBodyTemplate.cshtml
@@ -1,10 +1,8 @@
 ﻿@using System
-@using Microsoft.Rest.Generator.CSharp
-@using Microsoft.Rest.Generator.CSharp.Templates
 @using Microsoft.Rest.Generator.ClientModel
 @using Microsoft.Rest.Generator.Utilities
 @using System.Linq
-@inherits Microsoft.Rest.Generator.Template<ServiceClientTemplateModel>
+@inherits Microsoft.Rest.Generator.Template<AutoRest.CSharp.TemplateModels.ServiceClientTemplateModel>
 
 
 /// <summary>
