--- a/src/generator/AutoRest.CSharp/Templates/ServiceClientTemplate.cshtml
+++ b/src/generator/AutoRest.CSharp/Templates/ServiceClientTemplate.cshtml
@@ -1,9 +1,8 @@
 ﻿@using System
-@using Microsoft.Rest.Generator.CSharp
-@using Microsoft.Rest.Generator.CSharp.Templates
 @using Microsoft.Rest.Generator.Utilities
 @using System.Linq
-@inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.CSharp.ServiceClientTemplateModel>
+@using AutoRest.CSharp.Templates
+@inherits Microsoft.Rest.Generator.Template<AutoRest.CSharp.TemplateModels.ServiceClientTemplateModel>
 @Header("// ")
 @EmptyLine
 namespace @Settings.Namespace
