--- a/src/generator/AutoRest.CSharp.Azure/Templates/AzureMethodTemplate.cshtml
+++ b/src/generator/AutoRest.CSharp.Azure/Templates/AzureMethodTemplate.cshtml
@@ -1,10 +1,10 @@
 @using System
-@using Microsoft.Rest.Generator.CSharp
-@using Microsoft.Rest.Generator.CSharp.Templates
 @using Microsoft.Rest.Generator.CSharp.Azure.Templates
 @using Microsoft.Rest.Generator.Utilities
 @using Microsoft.Rest.Generator.ClientModel
 @using System.Linq
+@using AutoRest.CSharp.TemplateModels
+@using AutoRest.CSharp.Templates
 @inherits Microsoft.Rest.Generator.Template<AutoRest.CSharp.Azure.TemplateModels.AzureMethodTemplateModel>
 
 @if (!Model.IsLongRunningOperation)
