--- a/src/generator/AutoRest.CSharp/Templates/MethodGroupInterfaceTemplate.cshtml
+++ b/src/generator/AutoRest.CSharp/Templates/MethodGroupInterfaceTemplate.cshtml
@@ -1,7 +1,7 @@
 @using System
 @using System.Linq;
 @using Microsoft.Rest.Generator.Utilities
-@inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.CSharp.MethodGroupTemplateModel>
+@inherits Microsoft.Rest.Generator.Template<AutoRest.CSharp.TemplateModels.MethodGroupTemplateModel>
 @Header("// ")
 @EmptyLine
 namespace @Settings.Namespace
