--- a/src/generator/AutoRest.CSharp/Templates/MethodTemplate.cshtml
+++ b/src/generator/AutoRest.CSharp/Templates/MethodTemplate.cshtml
@@ -1,10 +1,11 @@
 ﻿@using System.Globalization
 @using System.Linq;
 @using System
+@using AutoRest.CSharp
+@using AutoRest.CSharp.TemplateModels
 @using Microsoft.Rest.Generator.ClientModel
-@using Microsoft.Rest.Generator.CSharp
 @using Microsoft.Rest.Generator.Utilities
-@inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.CSharp.MethodTemplateModel>
+@inherits Microsoft.Rest.Generator.Template<AutoRest.CSharp.TemplateModels.MethodTemplateModel>
 
 @if (!string.IsNullOrWhiteSpace(Model.Description) || !string.IsNullOrEmpty(Model.Summary))
 {
