--- a/src/generator/AutoRest.CSharp/Templates/ServiceClientInterfaceTemplate.cshtml
+++ b/src/generator/AutoRest.CSharp/Templates/ServiceClientInterfaceTemplate.cshtml
@@ -1,6 +1,6 @@
 @using System
 @using Microsoft.Rest.Generator.Utilities
-@inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.CSharp.ServiceClientTemplateModel>
+@inherits Microsoft.Rest.Generator.Template<AutoRest.CSharp.TemplateModels.ServiceClientTemplateModel>
 @Header("// ")
 @EmptyLine
 namespace @Settings.Namespace
