--- a/src/generator/AutoRest.Ruby/Templates/ModelTemplate.cshtml
+++ b/src/generator/AutoRest.Ruby/Templates/ModelTemplate.cshtml
@@ -25,10 +25,10 @@ module @(Settings.Namespace)
     @if (Model.IsPolymorphic && Model.BaseModelType == null)
     {
       @:@@@@discriminatorMap = Hash.new
-      @:@@@@discriminatorMap["@Model.SerializedName"] = "@Model.Name.ToLowerInvariant()"
+      @:@@@@discriminatorMap["@Model.SerializedName"] = "@Model.Name"
       foreach (var derivedType in Model.DerivedTypes)
       {
-      @:@@@@discriminatorMap["@derivedType.SerializedName"] = "@derivedType.Name.ToLowerInvariant()"
+      @:@@@@discriminatorMap["@derivedType.SerializedName"] = "@derivedType.Name"
       }
     }
     
