--- a/src/generator/AutoRest.Java/Templates/MethodTemplate.cshtml
+++ b/src/generator/AutoRest.Java/Templates/MethodTemplate.cshtml
@@ -84,23 +84,18 @@ public @Model.ReturnTypeModel.ClientResponseTypeString @(Model.Name)(@Model.Meth
 @: * @@param @param.Name @((param.Documentation.IsNullOrEmpty() ? "the " + param.Type.ToString() + " value" : param.Documentation).EscapeXmlComment().Trim())
 }
 @Model.CallbackDocumentation
- * @@throws IllegalArgumentException thrown if callback is null
  * @@return the {@@link Call} object
  */
-public ServiceCall @(Model.Name)Async(@Model.MethodRequiredParameterDeclarationWithCallback) throws IllegalArgumentException {
-    if (serviceCallback == null) {
-        throw new IllegalArgumentException("ServiceCallback is required for async calls.");
-    }
+public ServiceCall @(Model.Name)Async(@Model.MethodRequiredParameterDeclarationWithCallback) {
 @foreach (var param in Model.RequiredNullableParameters)
 {
 @:    if (@param.Name == null) {
-@:        serviceCallback.failure(new IllegalArgumentException("Parameter @param.Name is required and cannot be null."));
-@:        return null;
+@:        throw new IllegalArgumentException("Parameter @param.Name is required and cannot be null.");
 @:    }
 }
 @foreach (var param in Model.ParametersToValidate.Where(p => p.IsRequired))
 {
-@:    Validator.validate(@(param.Name), serviceCallback);
+@:    Validator.validate(@(param.Name));
 }
 
 @foreach (ParameterModel parameter in Model.LocalParameters)
@@ -129,7 +124,10 @@ public ServiceCall @(Model.Name)Async(@Model.MethodRequiredParameterDeclarationW
             try {
                 @Model.SuccessCallback(true)
             } catch (@Model.OperationExceptionTypeString | IOException exception) {
-                serviceCallback.failure(exception);
+                if (serviceCallback != null) {
+                    serviceCallback.failure(exception);
+                }
+                serviceCall.failure(exception);
             }
         }
     });
@@ -210,23 +208,18 @@ public @Model.ReturnTypeModel.ClientResponseTypeString @(Model.Name)(@Model.Meth
 @: * @@param @param.Name @((param.Documentation.IsNullOrEmpty() ? "the " + param.Type.ToString() + " value" : param.Documentation).EscapeXmlComment().Trim())
 }
 @Model.CallbackDocumentation
- * @@throws IllegalArgumentException thrown if callback is null
  * @@return the {@@link Call} object
  */
-public ServiceCall @(Model.Name)Async(@Model.MethodParameterDeclarationWithCallback) throws IllegalArgumentException {
-    if (serviceCallback == null) {
-        throw new IllegalArgumentException("ServiceCallback is required for async calls.");
-    }
+public ServiceCall @(Model.Name)Async(@Model.MethodParameterDeclarationWithCallback) {
 @foreach (var param in Model.RequiredNullableParameters)
 {
 @:    if (@param.Name == null) {
-@:        serviceCallback.failure(new IllegalArgumentException("Parameter @param.Name is required and cannot be null."));
-@:        return null;
+@:        throw new IllegalArgumentException("Parameter @param.Name is required and cannot be null.");
 @:    }
 }
 @foreach (var param in Model.ParametersToValidate)
 {
-@:    Validator.validate(@(param.Name), serviceCallback);
+@:    Validator.validate(@(param.Name));
 }
 
 @foreach (ParameterModel parameter in Model.LocalParameters)
@@ -251,7 +244,10 @@ public ServiceCall @(Model.Name)Async(@Model.MethodParameterDeclarationWithCallb
             try {
                 @Model.SuccessCallback()
             } catch (@Model.OperationExceptionTypeString | IOException exception) {
-                serviceCallback.failure(exception);
+                if (serviceCallback != null) {
+                    serviceCallback.failure(exception);
+                }
+                serviceCall.failure(exception);
             }
         }
     });
