Added a ModelsName command Line parameter. This allows the user to replace the hard coded Models in the models namespace and the models output folder for CSharp.

--- a/src/generator/AutoRest.CSharp.Azure/Templates/PageTemplate.cshtml
+++ b/src/generator/AutoRest.CSharp.Azure/Templates/PageTemplate.cshtml
@@ -2,7 +2,7 @@
 @inherits AutoRest.Core.Template<AutoRest.CSharp.Azure.TemplateModels.PageTemplateModel>
 @Header("// ")
 @EmptyLine
-namespace @(Settings.Namespace).Models
+namespace @(Settings.Namespace).@(Settings.ModelsName)
 {
     using System.Collections.Generic;
     using System.Linq;
