--- a/src/generator/AutoRest.CSharp/Templates/EnumTemplate.cshtml
+++ b/src/generator/AutoRest.CSharp/Templates/EnumTemplate.cshtml
@@ -2,7 +2,7 @@
 @inherits AutoRest.Core.Template<AutoRest.CSharp.TemplateModels.EnumTemplateModel>
 @Header("// ")
 @EmptyLine
-namespace @(Settings.Namespace).Models
+namespace @(Settings.Namespace).@(Settings.ModelsName)
 {
     using Newtonsoft.Json;
     using Newtonsoft.Json.Converters;
