--- a/src/generator/AutoRest.CSharp/Templates/ExceptionTemplate.cshtml
+++ b/src/generator/AutoRest.CSharp/Templates/ExceptionTemplate.cshtml
@@ -2,7 +2,7 @@
 @inherits AutoRest.Core.Template<AutoRest.CSharp.TemplateModels.ModelTemplateModel>
 @Header("// ")
 @EmptyLine
-namespace @(Settings.Namespace).Models
+namespace @(Settings.Namespace).@(Settings.ModelsName)
 {
     using Microsoft.Rest;
     using System;
