Added ModelsName Setting parameter and update CSharp to use this in place of the hard coded "Models" (#1324)
* Added a ModelsName command Line parameter.
This allows the user to replace the hard coded Models in the models namespace and the models output folder for CSharp.

* Updated Core Test to test Settings.ModelName

* Added a CSharp Unit test to verify ModelsName Parameter

* updated documentation for ModelsName setting and corrected ModelsName alias

--- a/src/generator/AutoRest.CSharp/Templates/ModelTemplate.cshtml
+++ b/src/generator/AutoRest.CSharp/Templates/ModelTemplate.cshtml
@@ -5,7 +5,7 @@
 @inherits Template<global::AutoRest.CSharp.TemplateModels.ModelTemplateModel>
 @Header("// ")
 @EmptyLine
-namespace @(Settings.Namespace).Models
+namespace @(Settings.Namespace).@(Settings.ModelsName)
 {
     using System.Linq;
 @EmptyLine
